--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,9 +17,9 @@ pre-commit = "^2.19.0"
 #                                 TESTS
 #
 ###############################################################################
-pytest = { version = "^7.2.0", optional = true}
-pytest-cov = { version = "^4.0.0", optional = true}
-pytest-xdist = { version = "^3.0", optional = true}
+pytest = "^7.2.0"
+pytest-cov = "^4.0.0"
+pytest-xdist = "^3.0"
 pytest-randomly = "^3.5.0"
 
 ###############################################################################
@@ -27,10 +27,10 @@ pytest-randomly = "^3.5.0"
 #                                 FIXERS
 #
 ###############################################################################
-black = { version = "^22.3.0", optional = true }
-autoflake = { version = "^1.7.7", optional = true }
-isort = { version = "^5.10.1", optional = true }
-docformatter = { version = "^1.5.0", optional = true, extras=["tomli"] }
+black = "^22.3.0"
+autoflake = "^1.7.7"
+isort = "^5.10.1"
+docformatter = {"^1.5.0", extras=["tomli"]}
 vulture = ">=1.0"
 
 
@@ -40,9 +40,10 @@ vulture = ">=1.0"
 #
 ###############################################################################
 mypy = "^0.942"
-interrogate = { version = "^1.5.0", optional = true }
+interrogate = "^1.5.0"
 flake8 = "^4.0.1"
 bandit = "^1.7.0"
+ruff
 
 
 [build-system]
