--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,13 @@ flake8 = "^4.0.1"
 bandit = "^1.7.0"
 ruff
 
+###############################################################################
+#
+#                                 DOCUMENTATION
+#
+###############################################################################
+pdoc3
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
