--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["{{cookiecutter.author_name}}"]
 [tool.poetry.dependencies]
 python = "^3.8"
 typeguard = "^2.13.3"
+ipython = "^8.2.0"
+jupyter = "^1.0.0"
 
 
 [tool.poetry.dev-dependencies]
@@ -30,9 +32,8 @@ pytest-randomly = "^3.5.0"
 black = "^22.3.0"
 autoflake = "^1.7.7"
 isort = "^5.10.1"
-docformatter = {"^1.5.0", extras=["tomli"]}
 vulture = ">=1.0"
-
+docformatter = {extras = ["tomli"], version = "^1.5.1"}
 
 ###############################################################################
 #
@@ -43,14 +44,15 @@ mypy = "^0.942"
 interrogate = "^1.5.0"
 flake8 = "^4.0.1"
 bandit = "^1.7.0"
-ruff
+ruff = "^0.0.253"
+yamllint = "^1.28.0"
 
 ###############################################################################
 #
 #                                 DOCUMENTATION
 #
 ###############################################################################
-pdoc3
+pdoc3 = "^0.10.0"
 
 
 [build-system]
