--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pytest = "^7.2.0"
 pytest-cov = "^4.0.0"
 pytest-xdist = "^3.0"
 pytest-randomly = "^3.5.0"
+tox = "^3.20.1"
 
 ###############################################################################
 #
