--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,6 +10,7 @@ repos:
       - id: requirements-txt-fixer
       - id: check-yaml
       - id: check-json
+      - id: check-toml
       - id: pretty-format-json
         args: ["--autofix"]
       - id: check-merge-conflict
