--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ tox = "*"
 #
 ###############################################################################
 black = "*"
-isort = "^5.10.1"
+#isort = "^5.10.1"
 docformatter = {extras = ["tomli"], version = "*"}
 
 ###############################################################################
