--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["{{cookiecutter.author_name}}"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "{{cookiecutter.python_version}}"
 ipython = "^8.2.0"
 jupyter = "^1.0.0"
 
@@ -31,7 +31,6 @@ tox = "*"
 #
 ###############################################################################
 black = "*"
-#isort = "^5.10.1"
 docformatter = {extras = ["tomli"], version = "*"}
 
 ###############################################################################
