--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["{{cookiecutter.author_name}}"]
 
 [tool.poetry.dependencies]
-python = "{{cookiecutter.python_version}}"
+python = "{{cookiecutter.python_versions}}"
 ipython = "^8.2.0"
 jupyter = "^1.0.0"
 
