--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -12,6 +12,7 @@ jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "*"
+nbqa = "*"
 
 ###############################################################################
 #
