--- a/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
@@ -49,15 +49,12 @@ repos:
       - id: interrogate
         args: [--quiet, --fail-under=90]
 
-  - repo: local
-    hooks:
-      - id: docformatter
-        name: docformatter
-        description: "Formats docstrings to follow PEP 257."
-        entry: docformatter
-        args: [-i]
-        language: python
-        types: [python]
+  - repo: https://github.com/PyCQA/docformatter
+      rev: v1.7.1
+      hooks:
+        - id: docformatter
+          additional_dependencies: [tomli]
+          args: [--in-place, --config, ./pyproject.toml]
 
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 0.7.0
