--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -24,7 +24,7 @@ pytest-cov = "*"
 pytest-xdist = "*"
 pytest-randomly = "*"
 pytest-instafail = "*"
-tox = "*"
+nox = "*"
 
 ###############################################################################
 #
@@ -32,6 +32,7 @@ tox = "*"
 #
 ###############################################################################
 black = "*"
+blacken-docs = "*"
 docformatter = {extras = ["tomli"], version = "*"}
 
 ###############################################################################
