Add new dependencies

--- a/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
@@ -17,39 +17,38 @@ repos:
       - id: check-case-conflict
       - id: check-docstring-first
 
-  - repo: https://github.com/Lucas-C/pre-commit-hooks-bandit
-    rev: v1.0.5
+  - repo: https://github.com/PyCQA/bandit
+    rev: '1.7.5'
     hooks:
-      - id: python-bandit-vulnerability-check
+      - id: bandit
+        args: ["-r",  "-c", "pyproject.toml"]
+        additional_dependencies: [ "bandit[toml]" ]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: ""
+    rev: "v1.7.1"
     hooks:
       - id: mypy
-
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: "v0.0.245"
-    hooks:
-      - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]
-
-  - repo: https://github.com/psf/black
-    rev: stable
-    hooks:
-      - id: black
 
   - repo: https://github.com/econchick/interrogate
     rev: 1.5.0
     hooks:
       - id: interrogate
-        args: [--quiet, --fail-under=90]
+        args: ["-c", "./pyproject.toml", "-i", "-v"]
+        pass_filenames: false
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.6
+    hooks:
+      - id: ruff
+        args: ["--fix"]
+      - id: ruff-format
 
   - repo: https://github.com/PyCQA/docformatter
-      rev: v1.7.1
-      hooks:
-        - id: docformatter
-          additional_dependencies: [tomli]
-          args: [--in-place, --config, ./pyproject.toml]
+    rev: v1.7.5
+    hooks:
+      - id: docformatter
+        additional_dependencies: [tomli]
+        args: ["--in-place", "--config", "./pyproject.toml"]
 
   - repo: https://github.com/adamchainz/blacken-docs
       rev: 1.16.0
