Change order of ruff tools

--- a/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
@@ -39,9 +39,10 @@ repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.1.6
     hooks:
+      - id: ruff-format
+        args: ["--line-length", "88"]
       - id: ruff
         args: ["--fix"]
-      - id: ruff-format
 
   - repo: https://github.com/PyCQA/docformatter
     rev: v1.7.5
