--- a/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
@@ -57,6 +57,16 @@ repos:
         - id: blacken-docs
           files: '\.(rst|md|markdown|tex)$'
 
+  - repo: https://github.com/codespell-project/codespell
+      rev: v2.2.5
+      hooks:
+        - id: codespell
+
+  - repo: https://github.com/kynan/nbstripout
+      rev: 0.5.0
+      hooks:
+      - id: nbstripout
+
 
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 0.7.0
