Add commitizen, remove ruff for notebooks in nbqa

--- a/{{cookiecutter.directory_name}}/pyproject.toml
+++ b/{{cookiecutter.directory_name}}/pyproject.toml
@@ -87,6 +87,9 @@ exclude = [
     "venv",
 ]
 
+extend-include = ["*.ipynb"]
+
+
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
