--- a/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
@@ -2,6 +2,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
+      - id: check-ast
       - id: trailing-whitespace
       - id: mixed-line-ending
       - id: check-added-large-files
@@ -71,20 +72,6 @@ repos:
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 0.7.0
     hooks:
-      - id: nbqa-isort
-        additional_dependencies: [isort==5.7.0]
-        args: [--nbqa-mutate]
-      - id: nbqa-black
-        additional_dependencies: [black==20.8b1]
-        args: [--nbqa-mutate]
-      - id: nbqa-ruff
-        name: nbqa-ruff
-        description: Run 'ruff' on a Jupyter Notebook
-        entry: nbqa ruff
-        language: python
-        additional_dependencies: [ruff]
-        require_serial: true
-        types_or: [jupyter, markdown]
       - id: nbqa-mypy
         name: nbqa-mypy
         description: Run 'mypy' on a Jupyter Notebook
@@ -93,3 +80,10 @@ repos:
         require_serial: true
         types_or: [jupyter, markdown]
         additional_dependencies: [mypy]
+
+  - repo: https://github.com/commitizen-tools/commitizen
+      rev: v3.13.0
+      hooks:
+      - id: commitizen
+      - id: commitizen-branch
+        stages: [push]
