--- a/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
+++ b/{{cookiecutter.directory_name}}/.pre-commit-config.yaml
@@ -3,12 +3,9 @@ repos:
     rev: v3.2.0
     hooks:
       - id: check-ast
-      - id: trailing-whitespace
-      - id: mixed-line-ending
       - id: check-added-large-files
         args: ["--maxkb=1000"]
-      - id: end-of-file-fixer
-      - id: requirements-txt-fixer
+      - id: check-shebang-scripts-are-executable
       - id: check-yaml
       - id: check-json
       - id: check-toml
@@ -17,13 +14,7 @@ repos:
       - id: check-merge-conflict
       - id: check-case-conflict
       - id: check-docstring-first
-
-  - repo: https://github.com/PyCQA/bandit
-    rev: '1.7.5'
-    hooks:
-      - id: bandit
-        args: ["-r",  "-c", "pyproject.toml"]
-        additional_dependencies: [ "bandit[toml]" ]
+      - id: debug-statements
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: "v1.7.1"
@@ -36,14 +27,17 @@ repos:
       - id: interrogate
         args: ["-c", "./pyproject.toml", "-i", "-v"]
         pass_filenames: false
+  
+  - repo: https://github.com/kynan/nbstripout
+    rev: 0.5.0
+    hooks:
+    - id: nbstripout
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.1.6
     hooks:
       - id: ruff-format
-        args: ["--line-length", "88"]
       - id: ruff
-        args: ["--fix"]
 
   - repo: https://github.com/PyCQA/docformatter
     rev: v1.7.5
@@ -52,34 +46,15 @@ repos:
         additional_dependencies: [tomli]
         args: ["--in-place", "--config", "./pyproject.toml"]
 
-  - repo: https://github.com/adamchainz/blacken-docs
-      rev: 1.16.0
-      hooks:
-        - id: blacken-docs
-          files: '\.(rst|md|markdown|tex)$'
-
   - repo: https://github.com/codespell-project/codespell
       rev: v2.2.5
       hooks:
         - id: codespell
 
-  - repo: https://github.com/kynan/nbstripout
-      rev: 0.5.0
-      hooks:
-      - id: nbstripout
-
-
   - repo: https://github.com/nbQA-dev/nbQA
     rev: 0.7.0
     hooks:
       - id: nbqa-mypy
-        name: nbqa-mypy
-        description: Run 'mypy' on a Jupyter Notebook
-        entry: nbqa mypy
-        language: python
-        require_serial: true
-        types_or: [jupyter, markdown]
-        additional_dependencies: [mypy]
 
   - repo: https://github.com/commitizen-tools/commitizen
       rev: v3.13.0
